--- a/pages/covid.html
+++ b/pages/covid.html
@@ -23,25 +23,25 @@
   <!-- Start your project here--> 
 
   <header>
-        <nav class="navbar fixed-top navbar-light navbar-expand-lg peach-gradient">
-            <a class="navbar-brand" href="#"><img src="/img/lvilleLogo.png" width="30" height="30" class="d-inline-block align-top"><strong> Navbar</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Coronavirus</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Profile</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <nav class="navbar fixed-top navbar-light navbar-expand-lg peach-gradient">
+        <a class="navbar-brand" href="#"><img src="/img/lvilleLogo.png" width="30" height="30" class="d-inline-block align-top"><strong> 2020</strong></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/covid.html">Coronavirus</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Profile</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     
         <div class="view intro-3">
             <div class="full-bg-img">
