--- a/pages/covid.html
+++ b/pages/covid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <base href="https://killocode.github.io">
+  <!--   <base href="https://killocode.github.io" -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -21,7 +21,7 @@
 </head>
 <body class="cloudy-knoxville-gradient">
 
-  <!-- Start your project here--> 
+  <!-- Start your project here-->
 
   <header>
     <nav class="navbar fixed-top navbar-light navbar-expand-lg peach-gradient">
@@ -40,7 +40,7 @@
             </ul>
         </div>
     </nav>
-    
+
         <div class="view intro-3">
             <div class="full-bg-img">
                 <div class="mask rgba-black-light flex-center">
@@ -55,13 +55,27 @@
                 </div>
             </div>
         </div>
-    
+
     </header>
 
 
 <main role="main" class="container">
+  <br>
+  <hr>
+  <br>
+  <div class="jumbotron card card-image" style="background-image: url(https://images.unsplash.com/photo-1549934004-d15f204ce71e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1200&q=80);">
+  <div class="text-white text-center py-5 px-4">
+    <div>
+      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Coronavirus</strong></h2>
+      <p class="mx-5 mb-5 jumbo-p"><strong>Coronavirus disease 2019</strong> (COVID-19) is an infectious disease caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). It was first identified in December 2019 in Wuhan, China, and has resulted in an ongoing pandemic. The first case may be traced back to 17 November 2019. As of June 6th 2020, more than 6.75 million cases have been reported across 188 countries and territories, resulting in more than 395,000 deaths. More than 2.76 million people have recovered.</p>
+      <br><hr><br>
+      <p class="mx-5 mb-5 jumbo-p"></p>
+      <a class="btn btn-outline-white btn-md"><i class="fas fa-clone left"></i> View project</a>
+    </div>
+  </div>
+</div>
 
-  
+
 </main>
 
 
